build/api/testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biodiversity-api-service
  namespace: testing
  labels:
    app: biodiversity-api
spec:
  selector:
    app: biodiversity-api
  type: ClusterIP
  ports:
    - name: node
      port: 80
      targetPort: 8080
