build/api/testing/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/enable-cors: 'false'
  name: biodiversity-api-ingress
  namespace: testing
  labels:
    app: biodiversity-api
spec:
  rules:
    - host: testing-ba-api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: biodiversity-api-service
              servicePort: 80
